<resources>
    <string name="app_name">MovieStash</string>
    <string name="fish">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="loading">Загрузка</string>
    <string name="out_date">Дата выхода: %1$s</string>
    <string name="countries_of_prod">Страны производства: %1$s</string>
    <string name="format">%.1f</string>
    <string name="money">%1$d $</string>
    <string name="ban_message">Ваш аккаунт заблокирован %1$s по причине: %2$s</string>
    <string name="search">Поиск фильмов</string>
    <string name="error_connection">Ошибка соединения!</string>
    <string name="edit_data">Изменить данные</string>
    <string name="exit">Выйти</string>
    <string name="collections_personal">Мои коллекции</string>
    <string name="users_banned">Пользователи в бане</string>
    <string name="user_review_delete">Удалить ревью пользователя</string>
    <string name="user_review_ban">Забанить автора ревью</string>
    <string name="header">Заголовок</string>
    <string name="description">Описание</string>
    <string name="actors">Актеры</string>
    <string name="more">Больше</string>
    <string name="crew">Команда</string>
    <string name="info">Информация</string>
    <string name="reviews">Отзывы</string>
    <string name="add">Добавить</string>
    <string name="filmography">Фильмография</string>
    <string name="birthplace">Место рождения: %s</string>
    <string name="height">Рост: %s</string>
    <string name="loading_error">Не удалось загрузить данные!</string>
    <string name="popular_content_label">Популярно сейчас</string>
    <string name="latest_news">Последние новости</string>
    <string name="genres">Жанры</string>
    <string name="search_content">Фильмы</string>
    <string name="search_celebrity">Знаменитости</string>
    <string name="save_credentials">Сохранить логин и пароль?</string>
    <string name="ok">Ок</string>
    <string name="add_news">Add news</string>
    <string name="rating">Оценка</string>
    <string name="save">Сохранить</string>
    <string name="title">Заголовок</string>
    <string name="collection">Коллекция</string>
    <string name="rate">Оценить</string>
    <string name="cancel">Отмена</string>
    <string name="publish">Опубликовать</string>
    <string name="delete">Удалить</string>
    <string name="hide">Скрыть</string>
    <string name="name">Название</string>
    <string name="collection_info">Параметры коллекции</string>
    <string name="edit">Изменить</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">E-mail</string>
    <string name="nickname">Никнейм</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="registration_successful">Пользователь успешно зарегистрирован!</string>
    <string name="email_not_empty">Email не может быть пустым</string>
    <string name="nickname_not_empty">Никнейм не может быть пустым</string>
    <string name="password_not_empty">Пароль не может быть пустым</string>
    <string name="login_not_empty">Логин не может быть пустым</string>
    <string name="banned_reason_label">Заблокирован %1$s по причине: %2$s</string>
    <string name="unban_user">Разблокировать пользователя</string>
    <string name="list_empty">Список пуст</string>
    <string name="news_not_found">Новость удалена или не существует</string>
    <string name="review_title_not_empty">Заголовок не может быть пустым</string>
    <string name="review_text_not_empty">Содержание не может быть пустым</string>
    <string name="block_user">Заблокировать пользователя %1$s</string>
    <string name="ban_reason">Причина блокировки</string>
    <string name="ban">Заблокировать</string>
    <string name="ban_reason_not_empty">Причина блокировки не может быть пустой</string>
    <string name="collection_name_not_empty">Название коллекции не может быть пустым</string>
    <string name="rate_content">Поставьте оценку</string>
    <string name="select_collection">Выберите коллекцию</string>
    <string name="saved_credentials">Сохраненные учетные записи</string>
    <string name="select">Выбрать</string>
    <string name="enter">Вход</string>
    <string name="button_register">Регистрация</string>
    <string name="autocomplete">Автозаполнение</string>
    <string name="news_title_not_empty">Заголовок не может быть пустым</string>
    <string name="news_text_not_empty">Текст новости не может быть пустым</string>
    <string name="search_hint">Поиск фильмов</string>
    <string name="my_collections">Мои коллекции</string>
    <string name="add_collections">Добавить коллекцию</string>
    <string-array name="opinion">
        <item>Плохо</item>
        <item>Нейтрально</item>
        <item>Хорошо</item>
    </string-array>
</resources>