<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.news_editor.NewsEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_news_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/header"
                android:inputType="text|textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_image_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/image_view_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/r_placeholder"
                tools:srcCompat="@drawable/r_placeholder" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edit_text_news_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/background_round"
            android:elevation="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="text|textCapSentences|textMultiLine"
            android:minHeight="200dp"
            android:padding="20dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/button_save_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>