<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingBottom="80dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".presentation.account.AccountFragment">

        <Button
            android:id="@+id/button_change_user_data"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit_data"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button_personal_collections"
            app:layout_constraintEnd_toEndOf="@+id/button_banned_users"
            app:layout_constraintStart_toStartOf="@+id/button_banned_users"
            app:layout_constraintTop_toBottomOf="@+id/button_banned_users" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_login"
            app:layout_constraintEnd_toEndOf="@+id/text_view_login"
            app:layout_constraintStart_toStartOf="@+id/text_view_login"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ban_message"
            tools:text="Почта" />

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_nickname"
            app:layout_constraintEnd_toEndOf="@+id/text_view_nickname"
            app:layout_constraintStart_toStartOf="@+id/text_view_nickname"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email"
            tools:text="Логин" />

        <Button
            android:id="@+id/button_exit"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/exit"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_personal_collections"
            app:layout_constraintStart_toStartOf="@+id/button_personal_collections"
            app:layout_constraintTop_toBottomOf="@+id/button_personal_collections" />

        <Button
            android:id="@+id/button_personal_collections"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/collections_personal"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button_exit"
            app:layout_constraintEnd_toEndOf="@+id/button_change_user_data"
            app:layout_constraintStart_toStartOf="@+id/button_change_user_data"
            app:layout_constraintTop_toBottomOf="@+id/button_change_user_data" />

        <TextView
            android:id="@+id/text_view_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_banned_users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_login"
            tools:text="Отображаемое имя" />

        <Button
            android:id="@+id/button_banned_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/users_banned"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_change_user_data"
            app:layout_constraintEnd_toEndOf="@+id/text_view_nickname"
            app:layout_constraintStart_toStartOf="@+id/text_view_nickname"
            app:layout_constraintTop_toBottomOf="@+id/text_view_nickname" />

        <TextView
            android:id="@+id/text_view_ban_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:textColor="#FF5E5E"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/text_view_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>